--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>My awesome web page</title>
     </head>
 
-  <body> 
+<img src="https://avatars.githubusercontent.com/u/95481631?v=4">
+
   <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
   </body>
