--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>My awesome web page</title>
+        <title>My favorites</title>
     </head>
 
 <img src="https://avatars.githubusercontent.com/u/95481631?v=4">
 
-  <h1>I'm a header 1!</h1>
-    Hello there, awesome person! 
-<ol> <li>This</li> <li>Is an</li> <li>Ordered list</li> </ol>
+  <h1> favorite books</h1>
+    Reading is like a journey of happiness! 
+<ol> <li>buried thoughts</li> <li>War and peace</li> God of small things<li></li> </ol>
 
 
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+      <li>My favorite book is<a href="https://g.co/kgs/jEAnjF"</li>
 <ul> <li>This</li> <li>Is an</li> <li>Unordered list</li> </ul>
 
 
